[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
config = { package = "config", path="../config"}

consensus = { package = "consensus", path="../consensus"}

ctrbc = {package = "ctrbc", path="../broadcast/ctrbc"}
ccbrb = {package = "ccbrb", path="../broadcast/ccbrb"}
acs = {package = "acs", path="../consensus/acs"}
binary_ba = {package = "binary_ba", path="../consensus/binary_ba"}
fin_mvba = {package = "fin_mvba", path="../consensus/fin_mvba"}
ibft = {package = "ibft", path="../consensus/ibft"}
ra = {package = "ra", path="../consensus/ra"}
crypto = { package = "crypto", path="../crypto"}

util = { package = "util", path="../util"}
anyhow = "1"
types = { package = "types", path="../types"}
clap = {version = "2", features = ["yaml"]}
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.8"
log="*"
simple_logger="*"
fnv = "1.0.3"
signal-hook = "0"

network = { package = "network", git = "https://github.com/linghe-yang/libnet-rs.git" }
async-trait = "0"
futures-util = "0"